deploy/deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
        deployment: vote
    spec:
      containers:
      - name: vote-http
        image: vote
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 0
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 0
          timeoutSeconds: 1
