deploy/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote-dev
  namespace: vote
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: vote-dev
  sessionAffinity: None
  type: ClusterIP
