deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  host: vote.csh.rit.edu
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: vote
    weight: 100
  wildcardPolicy: None
